--- a/src/app/components/pages/punto1/punto1.component.html
+++ b/src/app/components/pages/punto1/punto1.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div class="container pt-5 mt-4">
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active">
