--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark text-white py-3 mt-4">
+<footer class="footer text-white py-3">
     <div class="container text-center">
       <div class="row">
         <div class="col-12 col-md-4 mb-2 mb-md-0">
