--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">TP-N°3 ANGULAR</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,7 +13,10 @@
             <a class="nav-link" routerLink="punto2">Punto 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="punto3">Punto 3</a>
+            <a class="nav-link" routerLink="menu-punto3">Punto 3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="parte2">Parte 2</a>
           </li>
         </ul>
       </div>
