--- a/src/app/components/pages/punto2/punto2.component.css
+++ b/src/app/components/pages/punto2/punto2.component.css
@@ -1,4 +1,18 @@
-.card-img-top {
-    height: 180px;
-    object-fit: cover;
-  }
+.card {
+  background-color: var(--accent-color);
+  color: var(--text-color);
+}
+
+.card:hover {
+  background-color: var(--secondary-color);
+  color: var(--text-color);
+  box-shadow: var(--shadow-color);
+  transition: all 0.3s ease;
+  transform: scale(1.02);
+}
+
+.card img {
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  box-shadow: var(--shadow-color);
+}
