--- a/src/app/components/pages/punto3/menu/menu.component.css
+++ b/src/app/components/pages/punto3/menu/menu.component.css
@@ -1,34 +1,17 @@
-
-.hide-word{
-    color: var(--text-color);
-    letter-spacing: 1rem;
-}
-
 .container{
     background-color: var(--third-color);
 }
 
-.hungman-img{
-    box-shadow: var(--shadow-color);
-    max-width: 310px;
-    max-height: 310px;
-}
-
-.btn.btn-letter{
+.btn-primary {
     width: 100%;
     background-color: var(--accent-color);
     color: var(--text-color);
     border: 2px solid var(--primary-color);
 }
 
-.btn.btn-letter:hover {
+.btn-primary:hover {
     background-color: var(--secondary-color);
     color: var(--text-color);
     box-shadow: var(--shadow-color);
     transform: scale(1.02);
-}
-
-.btn-transparent{
-    background-color: transparent;
-    border-color: transparent;
 }
