--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+:root {
+    /* Colores modo claro*/
+    --background-color: #E8E9EB;
+    --text-color: #454545;
+    --primary-color: #826754;
+    --secondary-color: #DEDBD8;
+    --third-color: #BFB5AF; 
+    --accent-color: #f3efec;
+    --shadow-color: 1px 1px 5px 1px var(--primary-color);;
+}
+
+body{
+    background-color: var(--background-color) !important;
+}
