modal para comprar los productos

--- a/src/app/components/pages/parte2/data-table/data-table.component.html
+++ b/src/app/components/pages/parte2/data-table/data-table.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4 pb-4">
+<div class="container mt-4 pb-4 mb-4">
   <h2>Lista de Boletos Vendidos</h2>
   <div class="table-responsive">
     <table *ngIf="isBrowser" datatable [dtOptions]="dtOptions" class="row-border hover table table-striped">
