--- a/src/app/components/pages/parte2/parte2.component.html
+++ b/src/app/components/pages/parte2/parte2.component.html
@@ -1,10 +1,10 @@
 <div class="container pt-5 mt-5" style="min-height: 90vh;">
     <div class="row justify-content-center">
         <div class="col-12 col-md-10">
-           <app-form (ticketAgregado)="reiniciarTabla()"></app-form>
+           <app-form (ticketAgregado)="reiniciarTabla()" [ticketAEditar]="ticketAEditar" (edicionCompletada)="limpiarTicketAEditar()"></app-form>
         </div>
         <div class="col-12 col-md-10">
-            <app-data-table-component *ngIf="mostrarTabla"></app-data-table-component>
+            <app-data-table-component *ngIf="mostrarTabla" (editarTicket)="editarTicket($event)"></app-data-table-component>
         </div>
     </div>
 </div>
